--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             --color-text-secondary: #555;
             --color-link: #1a1a1a;
             --color-link-hover: #666;
-            --color-bg: #fafafa;
+            --color-bg: #ffffff;
             --color-border: #e0e0e0;
             --font-serif: 'Newsreader', Georgia, serif;
             --font-sans: 'Source Sans 3', -apple-system, BlinkMacSystemFont, sans-serif;
@@ -240,10 +240,7 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <div class="site-title"><a href="/">mills.land</a></div>
-            <p class="tagline">Mills Baker's portfolio, resume, and writing on design, technology, philosophy, history, music, and other trash.</p>
-        </header>
+  
 
         <figure class="hero-image">
             <!-- Replace src with your image path -->
@@ -328,8 +325,7 @@
         </main>
 
         <footer>
-            <div class="footer-title">Millsland</div>
-            <p class="footer-bio">I'm Mills Baker, and Millsland is my home on the Internet.</p>
+           
             <nav class="social-links">
                 <a href="http://mills.tumblr.com">tumblr</a>
                 <a href="https://medium.com/@millsbaker">medium</a>
