--- a/index.html
+++ b/index.html
@@ -240,12 +240,15 @@
     </style>
 </head>
 <body>
-    <!-- Narrow intro section -->
-    <div class="container-narrow">
-        <figure class="hero-image">
-            <img src="images/millsland.jpg.webp" alt="Millsland letterforms">
+    <div class="container-wide">
+            <figure class="hero-image">
+                <img src="images/millsland.jpg.webp" alt="Millsland letterforms">
             <figcaption>Letterforms above by <a href="http://helentseng.com">Helen Tseng</a>. Flower pattern inside by <a href="https://joro.cargo.site">Joro Chen</a>.</figcaption>
         </figure>
+    </div>
+    <!-- Narrow intro section -->
+    <div class="container-narrow">
+
 
         <main>
             <p>Hi! My name is Mills Baker. I'm from New Orleans and after more than a decade in San Francisco, I now live there again with my wife Abby, our daughter Keziah, and our son Raines. I'm the Head of Design at <strong><a href="https://substack.com">Substack</a></strong>, supporting an amazing team which serves creatives and audiences alike in a new model of distribution and monetization which we believe will foster a healthier, more sustainable online media ecosystem. Below, you can see some of us at Substack's 2023 summer party at the Conservatory of Flowers!</p>
