--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
             <p>I currently post at <strong><a href="https://ratsfromrocks.substack.com">Rats from Rocks</a></strong> with my pals <a href="http://davidcole.me">David Cole</a> and <a href="https://substack.com/@valetdecoeur?utm_source=about-page">Omar Khalid</a>. Some recent posts from me include <a href="https://suckstosuck.substack.com/p/father">thoughts on my father's death</a> and <a href="https://suckstosuck.substack.com/p/mother">more on my mother's death</a>; concerns that <a href="https://suckstosuck.substack.com/p/good-news-its-all-still-a-complete">people have been misinformed about the origin of the universe</a>; the usual garbage about <a href="https://suckstosuck.substack.com/p/knowledge-is-the-novels-only-morality">literature</a> and <a href="https://suckstosuck.substack.com/p/vision">technology</a>; and so on. David and I also write <strong><a href="https://thedeadhorses.substack.com">Dead Horses, a design + technology</a></strong> newsletter.</p>
 
-            <p>I'm <strong><a href="https://substack.com/@mills">most active online on Substack</a></strong>!</p>
+            <p>I'm <a href="https://substack.com/@mills">most active online on Substack</a>!</p>
 
             <figure class="section-image">
                 <img src="images/IMG_9064+2.JPG.webp" alt="Substack team at summer party">
