--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
         .hero-image img {
             width: 100%;
+            max-width: 100%;
             height: auto;
             display: block;
         }
