--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             max-width: 100%;
             height: auto;
             display: block;
+                padding-right: 30px; 
         }
 
         .hero-image figcaption {
