--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             max-width: 100%;
             height: auto;
             display: block;
-                padding-right: 30px; 
+                margin-left: 20px; 
         }
 
         .hero-image figcaption {
