--- a/index.html
+++ b/index.html
@@ -225,6 +225,11 @@
 
         /* Responsive: stack columns on mobile */
         @media (max-width: 700px) {
+
+            .hero-image img {
+        margin-left: 0;
+    }
+            
             .two-column-equal,
             .two-column-weighted {
                 grid-template-columns: 1fr;
