Revise personal bio in index.html
Updated personal introduction and background information.

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
 
         <main>
-            <p>Hi! My name is Mills Baker. I'm from New Orleans and after more than a decade in San Francisco, I now live there again with my wife Abby, our daughter Keziah, and our son Raines. I'm the Head of Design at <strong><a href="https://substack.com">Substack</a></strong>, supporting an amazing team which serves creatives and audiences alike in a new model of distribution and monetization which we believe will foster a healthier, more sustainable online media ecosystem. Below, you can see some of us at Substack's 2023 summer party at the Conservatory of Flowers!</p>
+            <p>Hi! My name is Mills Baker. I'm from New Orleans and after years in New York and more than a decade California, I'm back home again with my wife Abby, our daughter Keziah, and our son Raines. I'm the Head of Design at <strong><a href="https://substack.com">Substack</a></strong>, supporting an amazing team which serves creatives and audiences alike in a new model of distribution and monetization which we believe will foster a healthier, more sustainable online media ecosystem. Below, you can see some of us at Substack's 2023 summer party at the Conservatory of Flowers!</p>
             <figure class="section-image">
                 <img src="images/IMG_9064+2.JPG.webp" alt="Substack team at summer party">
             </figure>
